Fixed bug #41097 (ext/soap returning associative array as indexed without using WSDL)